--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -3,12 +3,11 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1>Welcome to Battleship!</h1>
 
-  {{> hello}}
+  {{> battleship}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="battleship">
+  <button>Click to start</button>
 </template>
