created CSS styling for autogenerated elements

--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -24,11 +24,11 @@
 	<!-- the grid populated by initGrid method -->
 	<button class="resetGrid">Reset Grid</button>
 	<div class="gameboard">
-		<div class="gridContainer">
-			<h2>My ships</h2>
+		<div class="labels">
+			<h2 class="friendly">My ships</h2>
+		<h2 class="enemy">Enemy ships</h2>
 		</div>
-		<div class="gridContainer">
-			<h2>Enemy ships</h2>
-		</div>
+		<div class="gridContainer"></div>
+		<div class="gridContainer"></div>
 	</div>
 </template>
