--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -27,10 +27,10 @@
 	<div class="gameContainer">
 		<div class="board" id="leftBoard">
 			<h2 class="label" id="friendly">My ships</h2>
-			
+
 			<div class="gridContainer" id="friendly">
 				{{#each cell}}
-					<div class="cell x{{x}} y{{y}}"></div>
+					<div class="cell x{{x}} y{{y}} {{state}}"></div>
 				{{/each}}
 			</div>
 		</div>
@@ -40,7 +40,7 @@
 
 			<div class="gridContainer" id="enemy">
 				{{#each cell}}
-					<div class="cell x{{x}} y{{y}}"></div>
+					<div class="cell x{{x}} y{{y}} {{state}}"></div>
 				{{/each}}
 			</div>
 		</div>
