tests work now... sorta...

--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -5,10 +5,10 @@
 <body>
   {{> titlebar }}
 
-  <!-- {{#if currentUser}} -->
+  {{#if currentUser}}
   <!-- put stuff to display if user is logged in in this block -->
   	{{> game }}
-  <!-- {{/if}} -->
+  {{/if}}
 
 </body>
 
