--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -15,19 +15,32 @@
 
 <template name="titlebar" class="titlebar">
 	<ul id="nav" style="margin:0;">
-		<li>Battleship</li>
+		<li style="font-size:1.2em;font-weight:bold;">Battleship</li>
 		<li> {{> loginButtons align="left"}} </li>
 	</ul>
 </template>
 
 <template name="game" class="game">
 	<!-- the grid populated by initGrid method -->
-	<button class="resetGrid">Reset Grid</button>
+	
 
 	<div class="gameContainer">
+
+		<div class="shipSelectContainer">
+			<ul class="shipList">
+				<li><h4 class="label">Select Ship</h4></li>
+				<li><button id="rotate">Rotate</button></li>
+				<li class="shipSelector" id="carrier">Aircraft Carrier</li>
+				<li class="shipSelector" id="battleship">Battleship</li>
+				<li class="shipSelector" id="cruiser">Cruiser</li>
+				<li class="shipSelector" id="submarine">Submarine</li>
+				<li class="shipSelector" id="destroyer">Destroyer</li>
+			</ul>
+		</div>
+
+		<!-- player board -->
 		<div class="board" id="leftBoard">
 			<h2 class="label" id="friendly">My ships</h2>
-
 			<div class="gridContainer" id="friendly">
 				{{#each cell}}
 					<div class="cell x{{x}} y{{y}} {{state}}"></div>
@@ -35,9 +48,9 @@
 			</div>
 		</div>
 
+		<!-- enemy board -->
 		<div class="board" id="rightBoard">
 			<h2 class="label" id="enemy">Enemy ships</h2>
-
 			<div class="gridContainer" id="enemy">
 				{{#each cell}}
 					<div class="cell x{{x}} y{{y}} {{state}}"></div>
@@ -45,5 +58,21 @@
 			</div>
 		</div>
 
+		<div class="sunkShips">
+			<ul class="sunkShipsList">
+				<li><h4 class="label">Sunk Ships</h4></li>
+				<li class="sunkShip" id="carrier">Aircraft Carrier</li>
+				<li class="sunkShip" id="battleship">Battleship</li>
+				<li class="sunkShip" id="cruiser">Cruiser</li>
+				<li class="sunkShip" id="submarine">Submarine</li>
+				<li class="sunkShip" id="destroyer">Destroyer</li>
+			</ul>
+		</div>
+
 	</div>
+
+	<button class="resetGrid">Reset Grid</button>
+
 </template>
+
+
