--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -43,7 +43,7 @@
 			<h2 class="label" id="friendly">My ships</h2>
 			<div class="gridContainer" id="friendly">
 				{{#each cell}}
-					<div class="cell x{{x}} y{{y}} {{state}}"></div>
+					<div class="cell {{mouseover}} x{{x}} y{{y}} {{state}}"></div>
 				{{/each}}
 			</div>
 		</div>
