--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -66,7 +66,9 @@
 
 	<button class="resetGrid">Reset Grid</button>
 
-	<img id="carrierImage" src="aircraftCarrierImage.jpg"/> 
+	{{#if placing}}
+		<img id="shipPack" src="Battleship_Pack.PNG"/>
+	{{/if}}
 
 </template>
 
