Fixed watermark img.

--- a/battleship/battleship.html
+++ b/battleship/battleship.html
@@ -72,7 +72,7 @@
 	{{#if placing}}
   	<!-- <span class="sprites" id="shipPack"></span> -->
 
-		<img id="shipPack" src="Battleship_Pack.PNG" />
+		<img id="shipPack" src="Battleship_Pack_empty.png" />
 	{{/if}}
 
 </template>
