--- a/battleship/client/battleship.html
+++ b/battleship/client/battleship.html
@@ -40,11 +40,11 @@
 			<ul class="shipList">
 				<li><h4 class="label">Select Ship</h4></li>
 				<li><button class="rotate">Rotation: {{rotation}}</button></li>
-				<li class="shipSelector" id="carrier">Aircraft Carrier</li>
-				<li class="shipSelector" id="battleship">Battleship</li>
-				<li class="shipSelector" id="cruiser">Cruiser</li>
-				<li class="shipSelector" id="submarine">Submarine</li>
-				<li class="shipSelector" id="destroyer">Destroyer</li>
+				<li class="shipSelector {{hidden}}" id="carrier">Aircraft Carrier</li>
+				<li class="shipSelector {{hidden}}" id="battleship">Battleship</li>
+				<li class="shipSelector {{hidden}}" id="cruiser">Cruiser</li>
+				<li class="shipSelector {{hidden}}" id="submarine">Submarine</li>
+				<li class="shipSelector {{hidden}}" id="destroyer">Destroyer</li>
 			</ul>
 		</div>
 
