--- a/battleship/client/battleship.html
+++ b/battleship/client/battleship.html
@@ -83,11 +83,13 @@
 
 	<button class="resetGrid">Reset Grid</button>
 
-	{{#if placing}}
-  	<!-- <span class="sprites" id="shipPack"></span> -->
-		<img id="shipPack" src="battleship_sprites_empty.png" />
-	{{/if}}
-
+	<!-- Ship Images -->
+	<img id="carrier_img" src="battleship_sprites_empty.png" width="0" height ="0"/>
+	<img id="cruiser_img" src="battleship_sprites_empty.png" width="0" height ="0"/>
+	<img id="battleship_img" src="battleship_sprites_empty.png" width="0" height ="0"/>
+	<img id="submarine_img" src="battleship_sprites_empty.png" width="0" height ="0"/>
+	<img id="destroyer_img" src="battleship_sprites_empty.png" width="0" height ="0"/>
+	<img id="shipPack" src="battleship_sprites_empty.png" width="0" height ="0"/>
 </template>
 
 
