--- a/battleship/client/battleship.html
+++ b/battleship/client/battleship.html
@@ -63,7 +63,7 @@
 			<h2 class="label" id="enemy">Enemy ships</h2>
 			<div class="gridContainer" id="enemyBoard">
 				{{#each enemyCell}}
-					<div class="cell enemy x{{row}} y{{col}} {{state}}"></div>
+					<div class="cell enemy x{{row}} y{{col}} {{state}} {{shot}}"></div>
 				{{/each}}
 			</div>
 		</div>
