finished shot/ship tracking redesign

--- a/battleship/client/battleship.html
+++ b/battleship/client/battleship.html
@@ -48,6 +48,7 @@
 				<li class="shipSelector {{hidden}}" id="cruiser">Cruiser</li>
 				<li class="shipSelector {{hidden}}" id="submarine">Submarine</li>
 				<li class="shipSelector {{hidden}}" id="destroyer">Destroyer</li>
+				<li><button class="done">Done</button></li>
 			</ul>
 		</div>
 
